<resources>
    <string name="app_name">BitBayApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome to bitBay App</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeToCart">Welcome to your cart</string>

    <!-- hints -->
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="filter_hint">Filter list by name</string>

    <!-- labels -->
    <string name="button_login_label">Login</string>
    <string name="button_skip_login_label">Skip Login</string>
    <string name="logout_label">Logout</string>
    <string name="profile_label">My Profile</string>
    <string name="please_login_label">Please log in</string>
    <string name="skip_login_label">Or skip log in</string>
    <string name="username_label">Username</string>
    <string name="email_label">Email</string>
    <string name="my_products_label">My products:</string>
    <string name="sellers_products_label">Sellers products:</string>
    <string name="name_label">Name</string>
    <string name="description_label">Description</string>
    <string name="buy_label">Add to cart</string>
    <string name="price_label">Price</string>
    <string name="quantity_label">Quantity</string>
    <string name="seller_rating_label">Sellers Rating</string>
    <string name="address_label">Address</string>
    <string name="cart_label">Cart</string>
    <string name="seller_profile_label">Sellers Profile</string>
    <string name="empty_cart_label">Your cart is empty! Buy something please :)</string>
    <string name="checkout_label">Checkout</string>
    <string name="remove_from_cart_label">Remove this item from cart?</string>

    <!-- keys -->
    <string name="key_user_email">bitcamp.nermin.service.user_email</string>
    <string name="key_user_password">bitcamp.nermin.service.user_password</string>

    <!-- toasts -->
    <string name="toast_try_again">Something went wrong! Try again</string>
    <string name="toast_login_error">Username or password wrong! Please try again.</string>

    <!-- defaults -->
    <string name="default_email">mustafa.ademovic93@gmail.com</string>
    <string name="default_password">123456</string>

    <!-- activity names -->
    <string name="title_activity_show_product">Products</string>
    <string name="title_activity_product">Product</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_seller">Seller</string>
    <string name="title_activity_fragmented_product">Product</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_cart_empty">Cart empty</string>
    <string name="title_activity_checkout_web_view">Checkout</string>

    <!-- services -->
    <string name="service_user">http://bitbay.cloudapp.net/api/showuser/%d</string>
    <string name="service_products">http://bitbay.cloudapp.net/api/allproducts</string>
    <string name="service_login">http://bitbay.cloudapp.net/api/login</string>
    <string name="service_image">http://bitbay.cloudapp.net/assets/</string>
    <string name="service_to_cart">http://bitbay.cloudapp.net/api/tocart</string>
    <string name="service_get_cart">http://bitbay.cloudapp.net/api/getcart</string>
    <string name="service_cart_checkout">http://bitbay.cloudapp.net/api/cartpage/</string>
    <string name="service_remove_from_cart">http://bitbay.cloudapp.net/api/removefromcart</string>

</resources>
