<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nermingraca.bitbayapp.fragments.MainProductFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="5">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/productImage"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/name_label"
            android:textColor="#000000"
            android:textSize="@dimen/abc_text_size_small_material" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#4DBD33" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:id="@+id/productName"
            android:gravity="center"
            android:includeFontPadding="false"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/price_label"
            android:textColor="#000000"
            android:textSize="@dimen/abc_text_size_small_material" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#4DBD33" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:id="@+id/productPrice"
            android:gravity="center"
            android:includeFontPadding="false"
            />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/buy_label"
                android:layout_gravity="center_vertical|center_horizontal"
                android:id="@+id/view_to_cart_button" />

            </LinearLayout>

    </LinearLayout>

</FrameLayout>
